# rust-list-site

./: .air.toml  Cargo.toml  Dockerfile
assets/firebase/: init.json
src/: auth.rs  handlers.rs  main.rs
src/db/: auth.rs  crud.rs  firestore.rs  mod.rs  types.rs  user.rs
src/db/types/: list.rs  mod.rs  user.rs
src/handlers/: handlers.rs  mod.rs
src/views/: index.rs  list.rs  list_group.rs  list_item.rs  list_item_edit.rs  list_item_text.rs  list_preview.rs  list_share.rs  macro.rs  mod.rs  views.rs
templates/: index.html  list.html  list_group.html  list_groups.html  list_item.html  list_item_edit.html  list_item_text.html  list_preview.html  list_share.html  todo.html  todo_text.html
templates/macros/: list_group.html  list_item.html  list_item_edit.html  list_item_text.html  list_preview.html  todo.html
