[package]
name = "rust-list-site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
firebase-auth = { version = "0.4.3", features = ["axum"] }
firestore = "0.44.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = "0.6.2"
uuid = { version = "1.11.1", features = ["serde", "v4"] }
